--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Agencies\Queries\" />
+    <Folder Include="Features\Responders\Queries\" />
+  </ItemGroup>
+
 </Project>
