Add agency and incident management features
Introduces commands, handlers, DTOs, and validators for managing supported incident types for agencies, including add/remove operations and paginated agency queries. Refactors incident and media domain models, updates event classes to records, and adds AI analysis support to incidents. Updates EF Core configurations for new domain changes, adds repository implementations for incidents and responders, and exposes new endpoints in AgencyController. Also adds OpenAI package reference and improves caching and address value object.

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Agencies\Queries\" />
+    <Folder Include="Features\Incidents\Queries\" />
     <Folder Include="Features\Responders\Queries\" />
   </ItemGroup>
 
